# ifsegment

./: .gitignore  pyproject.toml
src/ifsegment/: cli.py  run_cyto_mask.py  run_mask.py  run_quant.py
src/ifsegment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ifsegment/modules/: cyto_segment.py  io_utils.py  normalizations.py  nucleus_segment.py  protein_quantification.py
tests/: test_file_io.py
