[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifsegment"
version = "0.0.1"
description = "Cell segmentation and protein quantification from immunofluorescence images"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Chris Viets" }
]
dependencies = [
    "numpy",
    "aicspylibczi>=3.1.1",
    "aicsimageio @ git+https://github.com/cviets/aicsimageio@main",
    "tqdm",
    "scikit-image",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/cviets/ifsegment"
"Bug Tracker" = "https://github.com/cviets/ifsegment/issues"

[project.scripts]
ifsegment = "ifsegment.cli:main"